--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -30,22 +30,63 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/UMP_소크라테스예시.png)
 
-p.21부터
+<br/>
 
+### 증명(proof)
 
+- **증명(proof)** : 어떤 명제가 참임을 확립해 주는 타당한 논증
 
+    - 즉, "증명"은 단순히 주장하는 것이 아니라, 논리적으로 맞는 근거를 통해 그 말이 진짜 참이라는 것을 보여주는 과정이
 
+<br/>
 
+### 정리(theorem)
 
+- **정리(theorem)** : 다음을 사용해 참임을 보일 수 있는 명제
 
+    - (1) 정의
+    
+    - (2) 다른 정리
 
+    - (3) 공리(참이라고 가정하는 진술)
+    
+    - (4) 추론 규칙
 
+<br/>
 
+- **보조정리(lemma)** : ‘도와주는 정리’ 또는 어떤 정리를 증명하기 위해 필요한 결과
 
+    - 쉽게 말해, 큰 정리를 증명하기 전에 중간 단계에서 쓰이는 작은 정리를 의미 
 
+<br/>
 
+- **따름정리(corollary)** : 어떤 정리에서 직접적으로 따라 나오는 결과
 
+    - 정리를 증명하면 덤으로 쉽게 얻을 수 있는 추가 결과
+ 
+    - 덜 중요한 정리는 때때로 명제(proposition)라고 불린다
 
+<br/>
+
+- **추측(conjecture)** : 참일 것이라고 제안되는 진술
+
+    - 만약 그 추측에 대한 증명이 발견되면, 그것은 정리가 된다. 그러나 거짓일 수도 있다 
+
+<br/>
+
+- 정리
+    
+    - Proof (증명) = 참임을 보이는 논리적 과정
+
+    - Theorem (정리) = 증명된 중요한 명제
+
+    - Lemma (보조정리) = 정리를 증명하기 위한 중간단계 정리
+
+    - Corollary (따름정리) = 정리에서 바로 따라오는 결과
+
+    - Proposition (명제) = 비교적 덜 중요한 정리
+
+    - Conjecture (추측) = 증명 전 단계의 추측 (참일 수도, 거짓일 수도 있음) 
 
 
 
