--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -32,15 +32,13 @@
 
 <br/>
 
-### 증명(proof)
+### 증명(proof) 과 정리(theorem)
 
 - **증명(proof)** : 어떤 명제가 참임을 확립해 주는 타당한 논증
 
     - 즉, "증명"은 단순히 주장하는 것이 아니라, 논리적으로 맞는 근거를 통해 그 말이 진짜 참이라는 것을 보여주는 과정이
 
 <br/>
-
-### 정리(theorem)
 
 - **정리(theorem)** : 다음을 사용해 참임을 보일 수 있는 명제
 
@@ -88,14 +86,29 @@
 
     - Conjecture (추측) = 증명 전 단계의 추측 (참일 수도, 거짓일 수도 있음) 
 
+<br/>
 
+### Trivial Proof (자명한 증명) & Vacuous Proof (공허한 증명)
 
+- **자명한 증명(trivial proof)** : 만약 q가 참임을 안다면, p → q 역시 참이다
 
+    - ex: “비가 온다면 1=1이다.” 여기서 1=1은 항상 참이므로 문장 전체는 참
 
+<br/>
 
+- **공허한 증명(vacuous proof)** : 만약 p가 거짓이라면, p → q 역시 참이다
 
+    - ex: 만약 5가 짝수라면, 달은 치즈로 만들어졌다.
+ 
+        - 전제(p): “5가 짝수이다” → 거짓
 
+        - 결론(q): “달은 치즈로 만들어졌다” → 진위와 관계없음
+     
+        - 즉, 참으로 처리됨 
 
+<br/>
+
+- 위 예시가 별거 아닌 것 처럼 보일지라도, 이것은 귀납법에서 자주 사용된다
 
 
 
