--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -110,18 +110,41 @@
 
 - 위 예시가 별거 아닌 것 처럼 보일지라도, 이것은 귀납법에서 자주 사용된다
 
+    - 05-*.md에서 볼 예정
 
+<br/>
 
+### 증명 예시 문제 
 
+- **기본 정의**
 
+    - 짝수 정의: 정수 n이 짝수 <-> n = 2k (k는 정수)
 
+    - 홀수 정의: 정수 n이 홀수 <-> n = 2k + 1 (k는 정수)
 
+    - 추가 사실: 모든 정수는 짝수이거나 홀수이고, 둘 다일 수는 없다.
 
+<br/>
 
+- **문제** : n이 홀수일 때 n^2 역시 홀수임을 증명
 
+- **증명 방법** : **직접 증명(Direct Proof)** 사용
 
+    - 직접 증명(Direct Proof) : p가 참이라고 가정하고, 추론 규칙, 공리, 논리적 동치들을 사용해서 q도 참임을 보이는 증명 방식
+ 
+    - ex: "n이 홀수라고 가정하자 ~ " 와 같이 p를 참이라고 두고 전개하는 것 
 
+<br/>
 
+- **증명 과정**
+
+    - n = 2k + 1 (홀수 정의)
+ 
+    - 제곱: n^2 = (2k + 1)^2 = 4k^2 + 4k + 1
+
+    - 정리: n^2 = 2(2k^2 + 2k) + 1 = 2r + 1 (r은 정수)
+
+    - 2r + 1 꼴이므로 n^2는 홀수
 
 
 
