--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -38,6 +38,20 @@
 
     - 즉, "증명"은 단순히 주장하는 것이 아니라, 논리적으로 맞는 근거를 통해 그 말이 진짜 참이라는 것을 보여주는 과정이
 
+- **직접 증명(Direct Proof)** 
+
+    -  p가 참이라고 가정하고, 추론 규칙, 공리, 논리적 동치들을 사용해서 q도 참임을 보이는 증명 방식
+      
+    - ex: "n이 홀수라고 가정하자 ~ " 와 같이 p를 참이라고 두고 전개하는 것
+
+<br/>
+
+- **대우 증명(Proof by Contraposition)**
+
+    - ¬q(결론이 거짓)을 가정하고, ¬p(조건도 거짓임)를 증명하는 방식
+
+    -  만약 ¬q → ¬p를 직접 증명하면, 그것은 p → q의 증명하는 것과 동치이다
+      
 <br/>
 
 - **정리(theorem)** : 다음을 사용해 참임을 보일 수 있는 명제
