--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -160,8 +160,15 @@
 
     - 2r + 1 꼴이므로 n^2는 홀수
 
+<br/>
 
+- 대우 증명 예시 : 정수 n에 대해, 만약 n²가 홀수라면, n도 홀수임을 증명하라
 
+    - 원래 명제: n² 홀수 → n 홀수
+
+    - 대우로 변환: n 짝수 → n² 짝수
+
+    - 증명 흐름: n=2k → n²=4k²=2(2k²) → 짝수 → 따라서 대우가 참 → 원래 명제도 참
 
 
 
