--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -51,7 +51,13 @@
     - ¬q(결론이 거짓)을 가정하고, ¬p(조건도 거짓임)를 증명하는 방식
 
     -  만약 ¬q → ¬p를 직접 증명하면, 그것은 p → q의 증명하는 것과 동치이다
-      
+
+<br/>
+
+- **모순법(Proof by Contradiction)**
+
+    - ¬p(즉, p가 거짓)를 가정하고 모순(p ∧ ¬p와 같은)을 이끌어내어 증명하는 방식
+       
 <br/>
 
 - **정리(theorem)** : 다음을 사용해 참임을 보일 수 있는 명제
@@ -162,7 +168,7 @@
 
 <br/>
 
-- 대우 증명 예시 : 정수 n에 대해, 만약 n²가 홀수라면, n도 홀수임을 증명하라
+- **대우 증명 예시** : 정수 n에 대해, 만약 n²가 홀수라면, n도 홀수임을 증명하라
 
     - 원래 명제: n² 홀수 → n 홀수
 
@@ -170,6 +176,17 @@
 
     - 증명 흐름: n=2k → n²=4k²=2(2k²) → 짝수 → 따라서 대우가 참 → 원래 명제도 참
 
+<br/>
+
+- **모순법 예시** : 달력에서 22일을 고른다면, 최소한 4일은 같은 요일에 해당함을 증명하라
+
+    - 만약 같은 요일에 3일 이하만 들어간다고 가정하자.
+    
+    - 요일은 7개이므로, 최대로 잡아도 7 × 3 = 21일만 고를 수 있다
+    
+    - 그런데 우리는 22일을 골랐다고 했으니 모순이 된다
+ 
+    - 따라서 최소 4일은 반드시 같은 요일일 수 밖에 없다 
 
 
 
