--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -32,7 +32,7 @@
 
 <br/>
 
-### 증명(proof) 과 정리(theorem)
+### 증명(proof)의 정의와 종류
 
 - **증명(proof)** : 어떤 명제가 참임을 확립해 주는 타당한 논증
 
@@ -59,6 +59,8 @@
     - ¬p(즉, p가 거짓)를 가정하고 모순(p ∧ ¬p와 같은)을 이끌어내어 증명하는 방식
        
 <br/>
+
+### 정리의 정의와 종류 
 
 - **정리(theorem)** : 다음을 사용해 참임을 보일 수 있는 명제
 
@@ -92,9 +94,17 @@
 
 <br/>
 
-- 정리
-    
+### 증명과 정리 요약
+
+- 요약본
+  
     - Proof (증명) = 참임을 보이는 논리적 과정
+ 
+        - Direct Proof (직접 증명) : p가 참이라고 가정 후 q 증명
+     
+        - Proof by Contraposition (대우 증명) : ¬q(결론이 거짓)을 가정 후 ¬p(조건도 거짓임)를 증명
+     
+        - Proof by Contradiction (모순법) :  ¬p를 가정하고 모순을 이끌어내는 방식
 
     - Theorem (정리) = 증명된 중요한 명제
 
