--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -1,1 +1,162 @@
+### 불용어(stopword)
+
+- **불용어(stopword)**
+
+    - 자주 출현하지만 그 의미는 중요치 않은 단어들을 의미함
+ 
+    - ex: 관사(a, an, the)나 접속사(and, or)
+ 
+    - 어떤 토큰들을 불용어로 처리하여 제외할지는 상황에 따라 다름
+    
+    - 단, NLTK 등의 라이브러리에서 일반적으로 쓰는 불용어 리스트는 존재
+ 
+        - 라이브러리마다 불용어 리스트가 다를 수 있음  
+ 
+    - 전통적인 NLP에서는 불용어 제거가 필수적, 하지만 딥러닝 기반 NLP에서는 그 중요성이 예전보다는 감소함 (스스로 처리하기 때문)
+  
+<br/>
+
+- scikit-learn과 NLTK 불용어의 합집합 및 교집합 관련 예시
+
+```ruby
+from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS as sklearn_stop_words
+from nltk.corpus import stopwords
+
+len(sklearn_stop_words) # scikit-learn이 제공하는 불용어 개수
+### 출력 : 318
+
+len(stopwords.words('english')) # NLTK에서 제공하는 영어 불용어 개수를 세어줌 
+### 출력 : 179
+
+len(stop_words.union(sklearn_stop_words)) # NLTK와 scikit-learn 불용어를 합쳐서 중복 없이 모은 총 개수를 계산
+### 출력 : 378
+
+len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어 목록에서 공통으로 들어 있는 단어 개수를 계산
+### 출력 : 119
+```
+
+<br/>
+
+### 정규화(normalization)
+
+- **정규화(normalization)** : 실질적으로는 의미가 같으나 표현 방법이 다른 단어들을 통합하는 과정
+
+    - 대소문자 통합
+ 
+        - 장점 : 약 절반 정도 토큰 수를 줄일 수 있음
+     
+        - 단점 : 대문자로 인해 지명, 상표 등 고유명사를 인식이 어려움 -> 성능 저하
+     
+            - 의도적으로 쓰인 대문자를 구분, 문장의 시작을 소문자로 적용하는 방법이 존재
+         
+                - 하지만, 이 경우 "Tom is here."처럼 사람 이름으로 시작할 경우 문제 발생
+             
+                - **즉, 상황에 따라 깊이 생각해보고 적용할 필요가 있음**
+    
+    - 어간 추출
+ 
+        - 어간 : 복수형(-s), 진행형(-ing) 등을 떼어난 근본 단어 
+    
+    - 표제어 추출
+ 
+        - 표제어 : 기본형
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
