--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -45,6 +45,12 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
  
         - 장점 : 약 절반 정도 토큰 수를 줄일 수 있음
      
+            -  기계학습 모델의 과적합을 줄여줌
+         
+            -  검색에 활용될 경우 검색 엔진의 재현율(recall) 개선에 기여할 수 있음
+         
+            -  만약 통합되지 않으면 Age와 age가 다른 단어로 인식
+     
         - 단점 : 대문자로 인해 지명, 상표 등 고유명사를 인식이 어려움 -> 성능 저하
      
             - 의도적으로 쓰인 대문자를 구분, 문장의 시작을 소문자로 적용하는 방법이 존재
@@ -61,13 +67,27 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
  
         - 표제어 : 기본형
 
+<br/>
 
+### 재현율(recall) & 정밀도(precision)
 
+- 검색 성능을 평가할 때 쓰는 두 가지 지표
 
+    - **재현율(recall)**: 실제로 관련 있는 문서 중에서 얼마나 많이 찾아냈는가?
 
+    - **정밀도(precision)**: 찾아낸 문서 중에서 실제로 관련 있는 문서가 얼마나 되는가?
 
+<br/>
 
+- 일반적으로 어휘 정규화는 검색의 **재현율을 높이지만 정밀도를 낮추게 됨**
 
+    - 정규화를 하면 많은 문서를 찾을 수 있지만, 그중에는 원하지 않는 결과도 섞일 가능성이 커짐 
+
+    - ex: ‘Age(나이)’에 관한 문서를 원했는데, ‘age(시대)’에 관한 문서
+ 
+    - 이에 검색 엔진에서 정규화를 회피하는 수단으로 “” 기능을 제공
+     
+       - "" : 정규화 없이 그대로 검색할 수 있게 기능
 
 
 
