--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -82,9 +82,9 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 - 일반적으로 어휘 정규화는 검색의 **재현율을 높이지만 정밀도를 낮추게 됨**
 
     - 정규화를 하면 많은 문서를 찾을 수 있지만, 그중에는 원하지 않는 결과도 섞일 가능성이 커짐 
-
-    - ex: ‘Age(나이)’에 관한 문서를 원했는데, ‘age(시대)’에 관한 문서
- 
+    
+    - ex: "Apple" (회사 Apple을 찾고 싶음) -> 정규화로 "apple"로 변환 -> **정밀도 저하**
+    
     - 이에 검색 엔진에서 정규화를 회피하는 수단으로 “” 기능을 제공
      
        - "" : 정규화 없이 그대로 검색할 수 있게 기능
