--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -89,10 +89,25 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
      
        - "" : 정규화 없이 그대로 검색할 수 있게 기능
 
+<br/>
 
+### 어간 추출(stemming) 기법
 
+- **어간 추출(stemming) 기법**
 
+    - 추출된 어간은 반드시 사전에 나오는 형태여야 할 필요는 없고, 한 어간의 다양한 형태를 대표할 수 있으면 됨
+ 
+    - ex: study, studies, studying, studied 를 studi로 추출을 하여 하나로 묶어도 괜찮음
+ 
+       - 어간 추출은 완벽한 단어가 목표가 아니라 하나로 **같은 뿌리를 공유하는 단어를 하나로 묶는게 핵심**
 
+<br/>
+
+- 어간 추출 또한 정규화의 일종이므로 **재현율을 높이지만 정밀도는 감소**
+
+    - ex:  “Dr. House’s call” 라는 미국 드라마 제목을 어간추출 해주면 “dr house call”
+ 
+        - 결과적으로 드라마가 아니라 “의사 집에 전화하다” 같은 엉뚱한 의미로 검색될 수 있음 
 
 
 
