--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -109,14 +109,40 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
  
         - 결과적으로 드라마가 아니라 “의사 집에 전화하다” 같은 엉뚱한 의미로 검색될 수 있음 
 
+<br/>
+
+### 간단한 어간 추출 예시 
+
+- 규칙
+ 
+    - 단어가 둘 이상의 s로 끝나면, 어간은 그 단어 자체이며 별도의 접미사 없음
+    
+    - 단어가 하나의 s로 끝나면 어간은 s를 제외한 부분이며, s가 접미사가 됨
+   
+    - 단어가 s로 끝나지 않으면 어간은 그 단어 자체이고 별도의 접미사가 없음
 
 
+```ruby
+>>> def stem(phrase):  
+...     # phrase(문자열)을 입력으로 받아서 어간을 추출하는 함수 정의
+...     
+...     return ' '.join(   # 처리된 단어들을 공백으로 연결하여 반환
+...         [re.findall('^(.*ss|.*?)(s)?$',  # 정규표현식으로 단어 끝의 s를 구분
+...                      word)[0][0].strip("'")  # 매칭된 그룹 중 어간 부분만 추출
+...          for word in phrase.lower().split()]  # 입력 문자열을 소문자로 바꾸고 단어 단위로 나눈 후 반복
+...     )
 
+>>> stem('houses')
+'house'  
+# "houses" → 끝의 s를 제거하고 "house"만 남김
 
-
-
-
-
+>>> stem("Doctor House's calls")
+'doctor house call'
+# 1) "Doctor" → 소문자로 변환 → "doctor"
+# 2) "House's" → s 제거 → "house"
+# 3) "calls" → s 제거 → "call"
+# 모두 합쳐서 'doctor house call' 반환
+```
 
 
 
