--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -121,6 +121,7 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
    
     - 단어가 s로 끝나지 않으면 어간은 그 단어 자체이고 별도의 접미사가 없음
 
+<br/>
 
 ```ruby
 >>> def stem(phrase):  
@@ -144,6 +145,28 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 # 모두 합쳐서 'doctor house call' 반환
 ```
 
+<br/>
+
+```ruby
+>>> from nltk.stem.porter import PorterStemmer  
+# NLTK 라이브러리에서 PorterStemmer 클래스를 불러옴 (영어에서 가장 널리 쓰이는 어간 추출기 중 하나)
+
+>>> stemmer = PorterStemmer()  
+# PorterStemmer 객체 생성 → stemmer라는 이름으로 사용
+
+>>> ' '.join([stemmer.stem(w).strip("'") for w in "dish washer's washed dishes".split()])  
+# 1) 문자열 "dish washer's washed dishes"를 공백 기준으로 나눔 → ["dish", "washer's", "washed", "dishes"]
+# 2) 각 단어에 대해 stemmer.stem(w) 적용 → 어간 추출
+#    - "dish"     → "dish"
+#    - "washer's" → "washer"
+#    - "washed"   → "wash"
+#    - "dishes"   → "dish"
+# 3) strip("'") : 단어 양쪽의 작은 따옴표(')가 있으면 제거
+# 4) 변환된 결과를 공백으로 join → 하나의 문자열로 합침
+
+# 최종 결과
+'dish washer wash dish'
+```
 
 
 
