--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -145,6 +145,8 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 # 모두 합쳐서 'doctor house call' 반환
 ```
 
+-  PorterStemmer 예시
+
 <br/>
 
 ```ruby
