--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -170,7 +170,23 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 'dish washer wash dish'
 ```
 
+<br/>
 
+### 표제어 추출(lemmatization)
+
+- **표제어 추출(lemmatization)**
+
+    - 토큰들을 해당 의미의 근본적인 형태인 어근 수준으로 정규화하는 방식
+ 
+        - ex: am, are, is → be 
+
+    - 형태적인 부분보다 **의미적인 부분에 집중**하여 정규화를 수행
+ 
+        - 고급 표제어 추출기 : 각 토큰의 품사는 물론 주변 문맥까지 고려
+ 
+            - 어간 추출 ex:  running → runn 과 같이 어색한 결과
+     
+            - 표제어 추출 ex: better → good 으로 사전에 있는 기본형으로 변환
 
 
 
