--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -1,1 +1,155 @@
+### 집합론(Set Theory)’의 기초 개념
+
+- **집합**
+
+    - **순서가 없는** 원소들의 모임이다
+ 
+        - {1, 2, 3} 과 {3, 2, 1} 는 같음
+
+- **집합의 예시**
+
+- A = {♣, ◇}
+    - 집합 A에는 ♣와 ◇ 두 원소가 들어있다
+
+- ◇ ∈ A ; ♡ ∉ A
+    - ◇는 A에 포함된다, ♡는 A에 포함되지 않는다
+
+- B = {1, 2, 3}
+    -  1, 2, 3이라는 세 숫자의 집합이다
+
+- C = {x² : x = 1, 2, 3} = {1, 4, 9}
+    - 집합 C는 1,2,3을 제곱한 값들을 원소로 가진 집합이다
+
+- D = {H, T}
+    - D는 동전 던지기의 결과(앞면 H, 뒷면 T) 집합이다
+
+<br/>
+
+- **특별한 집합 기호**
+
+    - 자연수 집합, **N** = {1, 2, 3, …}
+        - 1부터 시작하는 수.
+
+    - 정수 집합, **Z** = {…, −3, −2, −1, 0, 1, 2, 3, …}
+        - 음수, 0, 양수를 모두 포함.
+
+    - 실수 집합, **R**
+        - 소수, 무리수까지 포함하는 모든 수.
+
+<br/>
+
+- **부분집합 (Subset)**
+
+    - **A ⊂ B ≡ (x ∈ A ⇒ x ∈ B)** 
+
+    - 집합 A의 모든 원소가 B에도 들어있으면 A는 B의 부분집합
+ 
+    - ex: N ⊂ Z
+ 
+        - 모든 자연수는 정수의 부분집합 
+
+<br/>
+
+- **집합의 같음 (Equality)**
+
+    - **A = B**
+
+    - 두 집합이 서로 부분집합 관계이면, 두 집합은 같다
+ 
+    - ex: {a,a,b} = {a,b}
+
+        - 중복된 원소는 무시되므로 동일하다
+
+<br/>
+
+- **전체집합**
+
+    - S 또는 Ω로 표기
+
+- **공집합**
+    
+    - ∅ = Null set = {}
+ 
+    - **공집합은 모든 집합의 부분집합**
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
