--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -62,29 +62,46 @@
 
 <br/>
 
-- **전체집합**
+- **전체집합 (Universal set)**
 
     - S 또는 Ω로 표기
 
-- **공집합**
+- **공집합 (Null set)**
     
-    - ∅ = Null set = {}
+    - ∅ 또는 {}
  
     - **공집합은 모든 집합의 부분집합**
 
+<br/>
+
+- **Venn Diagrams**
+
+    - 집합을 닫힌 도형(보통 원, 사각형 등)으로 나타낸 것
+ 
+    - ∪ : 합집합 (Union)
+ 
+    - ∩ : 교집합 (Intersection)
+ 
+    - Aᶜ 또는 Ā : 여집합 (Complement)
+ 
+    - A − B 또는 A ∩ Bᶜ : 차집합 (Difference)
+ 
+    - A₁, A₂, …, Aₙ are m.e. if Aᵢ ∩ Aⱼ = ∅, i ≠ j : 서로소 집합 (Mutually Exclusive, Disjoint)
+ 
+        - 서로소 : 집합 A와 B의 교집합이 공집합, 각 원이 떨어져있는 구조 
 
 
+    - A₁ ∪ A₂ ∪ A₃ ∪ … ∪ Aₙ = S : 분할 (Partition)
 
+        - 모든 부분집합들을 합치면 전체집합 S가 되어야 한다
 
+        - 각 부분집합들은 서로소여야함. 즉 겹치지 않아야 함
 
+<br/>
 
+### De Morgan's Law (드모르간 법칙)
 
-
-
-
-
-
-
+- **(A∪B)c=A∪B=Ac∩Bc**
 
 
 
