--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -101,7 +101,8 @@
 
 ### De Morgan's Law (드모르간 법칙)
 
-- **(A∪B)c=A∪B=Ac∩Bc**
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/드모르간법칙.png)
+
 
 
 
