--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -103,9 +103,27 @@
 
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/드모르간법칙.png)
 
+- **De Morgan's Law (드모르간 법칙)**
 
+    - A와 B의 합집합의 여집합은 A의 여집합과 B의 여집합의 교집합과 같다
 
+<br/>
 
+### 예시 문제 
+
+- 문제 : S = {1,2,3,4,5,6}, A = {1,2}, B = {2,4,6} 일 때 다음을 구하라
+
+    -  A ∪ B = {1,2,4,6} (둘 중 하나라도 포함)
+
+    -  A ∩ B = {2} (공통 원소)
+
+    -  Aᶜ = {3,4,5,6} (S 안에서 A를 뺀 나머지)
+
+    -  Bᶜ = {1,3,5}
+
+    -  (A ∪ B)ᶜ = {3,5}
+
+    -  Aᶜ ∩ Bᶜ = {3,5} (드모르간 법칙 확인)
 
 
 
