--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -99,19 +99,15 @@
 
 <br/>
 
-### De Morgan's Law (드모르간 법칙)
+### **De Morgan's Law (드모르간 법칙)**
+
+- A와 B의 합집합의 여집합은 A의 여집합과 B의 여집합의 교집합과 같다
 
 ![System Resources](../../images/Probability%20Theory%20for%20AI%20images/드모르간법칙.png)
 
-- **De Morgan's Law (드모르간 법칙)**
-
-    - A와 B의 합집합의 여집합은 A의 여집합과 B의 여집합의 교집합과 같다
-
 <br/>
 
-### 예시 문제 
-
-- 문제 : S = {1,2,3,4,5,6}, A = {1,2}, B = {2,4,6} 일 때 다음을 구하라
+- 예시 문제 : S = {1,2,3,4,5,6}, A = {1,2}, B = {2,4,6} 일 때 다음을 구하라
 
     -  A ∪ B = {1,2,4,6} (둘 중 하나라도 포함)
 
@@ -125,6 +121,35 @@
 
     -  Aᶜ ∩ Bᶜ = {3,5} (드모르간 법칙 확인)
 
+<br/>
+
+### Distributive Law (분배법칙)
+
+- A ∪ (B ∩ C) = (A ∪ B) ∩ (A ∪ C)
+
+    - A와 (B와 C의 교집합)의 합집합은, (A와 B의 합집합)과 (A와 C의 합집합)의 교집합과 같다 
+
+<br/>
+
+### Functions (함수의 정의)
+
+- f : X → Y
+
+     - 함수 f는 집합 X에서 집합 Y로 가는 대응 관계이다
+
+- X : Domain
+
+     - 정의역(Domain): 함수에 입력할 수 있는 값들의 집합
+
+- Y : Co-domain
+
+    - 공역(Co-domain): 함수가 도달할 수 있는 "가능한 출력값들의 집합" (전체 범위)
+
+- ∀ x ∈ X, f(x) ∈ Y
+
+     - 모든 x가 X에 속하면, f(x)는 Y에 속한다
+ 
+         - 실제로 함수가 만들어내는 출력값들의 집합. 공역 Y의 부분집합이 될 수 있다 
 
 
 
