--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -151,7 +151,7 @@
  
          - 실제로 함수가 만들어내는 출력값들의 집합. 공역 Y의 부분집합이 될 수 있다 
 
-
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/함수설명.png)
 
 
 
