--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -153,7 +153,27 @@
  
          - 실제로 함수가 만들어내는 출력값들의 집합. 공역 Y의 부분집합이 될 수 있다 
 
+- 일대일 함수
+  
+    - f(x1​) = f(x2​) ⇒ x1 ​= x2​ : 
 
+    - 역함수가 존재하는 함수, 서로 다른 입력값이 항상 서로 다른 출력값을 만든다
+ 
+    - 모든 출력값(y값)이 반드시 사용될 필요는 없다
+
+- 일대일 대응
+
+    - 일대일 함수(injective) + 전사(surjective)
+ 
+    - 일대일 함수를 만족하며, 모든 출력값이 정확히 하나의 입력값과 짝지어진다
+      
+<br/>
+
+- 만약 함수 f를 x²로 정의한다면
+
+    -  정의역도 실수 전체, 공역도 실수 전체
+ 
+    -  하지만 실제 Y값 범위는 음수가 될 수 없으므로 0 이상인 값들로 영역을 정할 수 있음 
 
 
 
