--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -1,4 +1,4 @@
-### 집합론(Set Theory)’의 기초 개념
+### 집합론(Set Theory)의 기초 개념
 
 - **집합**
 
@@ -175,13 +175,34 @@
  
     -  하지만 실제 Y값 범위는 음수가 될 수 없으므로 0 이상인 값들로 영역을 정할 수 있음 
 
+<br/>
 
+### Countable and Uncountable Sets (가산집합과 비가산집합)
 
+- 집합 A의 크기(**카디널리티**)
 
+    - A에 있는 **원소의 개수** 라는 의미로 **|A|** 로 표기
+ 
+    - 원소 개수가 유한하면 **유한 집합**이다
+ 
+        - |A| < ∞
 
+- **가산집합 (countable set)**
 
+    - 집합이 **유한**하거나, 원소들을 1,2,3,…처럼 순서대로 **셀 수 있는**집합
+ 
+    - 유한집합이든 무한집합이든 셀 수 있으면 가산집합임
+ 
+        - ex: 자연수 집합 N은 무한하지만, 1,2,3,…처럼 셀 수 있으므로 가산집합
 
+<br/>
 
+- **비가산집합 (Uncountable Sets)**
+
+    - **셀 수 없는** 집합
+ 
+        - ex: 실수 전체 ℝ, 구간 [0,1] 같은 집합은 비가산집합
+           
 
 
 
