--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -195,6 +195,8 @@
  
         - ex: 자연수 집합 N은 무한하지만, 1,2,3,…처럼 셀 수 있으므로 가산집합
 
+![System Resources](../../images/Probability%20Theory%20for%20AI%20images/가산집합공식.png)
+
 <br/>
 
 - **비가산집합 (Uncountable Sets)**
