--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -205,15 +205,39 @@
  
         - ex: 실수 전체 ℝ, 구간 [0,1] 같은 집합은 비가산집합
            
+<br/>
 
+### Random Experiment (확률 실험)
 
+- 용어 정리
 
+    - **Random Experiment** : 결과를 확실히 예측할 수 없는 현상
+ 
+        - Roll a die (주사위를 한 번 던지기)
 
+        - Roll a die three times (주사위를 세 번 던지기)
 
+        - Flip a coin (동전 던지기)
 
+    - **Outcome (결과)** : 무작위 실험을 실제로 했을 때 나온 값
+ 
+        - Roll a die → 결과 = 3
 
+        - Roll a die three times → 결과 = (2, 3, 6)
 
+    - **Events (사건)** : 여러 가능한 결과들의 모임
 
+        - E1 = {1, 3, 5}
+
+        - E2 = {2, 4}
+
+        - E3 = {6}
+     
+    - **Sample Space (표본공간, Ω)** : 무작위 실험에서 일어날 수 있는 모든 결과들의 집합
+
+        - Roll a die → Ω = {1, 2, 3, 4, 5, 6}
+
+        - Roll a die three times → Ω = {(1,1,1), (1,1,2), … , (6,6,6)}
 
 
 
