--- a/Probability Theory for AI/Probability Theory for AI study/02장.md
+++ b/Probability Theory for AI/Probability Theory for AI study/02장.md
@@ -221,11 +221,15 @@
 
     - **Outcome (결과)** : 무작위 실험을 실제로 했을 때 나온 값
  
+        - 집합의 원소(Element)로 표현 
+ 
         - Roll a die → 결과 = 3
 
         - Roll a die three times → 결과 = (2, 3, 6)
 
     - **Events (사건)** : 여러 가능한 결과들의 모임
+ 
+        - 집합(Set)으로 표현
 
         - E1 = {1, 3, 5}
 
@@ -234,17 +238,27 @@
         - E3 = {6}
      
     - **Sample Space (표본공간, Ω)** : 무작위 실험에서 일어날 수 있는 모든 결과들의 집합
+ 
+        - 전체집합(Universal set)으로 표현
 
         - Roll a die → Ω = {1, 2, 3, 4, 5, 6}
 
         - Roll a die three times → Ω = {(1,1,1), (1,1,2), … , (6,6,6)}
 
 
+    - 쉽게 정리
+ 
+        - 표본공간 = 전체 경우의 수
+
+        - 사건 = 그 안에서 관심 있는 부분집합
+
+        - 결과 = 실제로 나온 하나의 값
+
+        - 결과가 사건에 속하면 → 그 사건이 발생한 것
 
 
 
-
-
+## p.29부터
 
 
 
