--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -201,14 +201,25 @@ representation)이라고 함
 
             - 문장2 "I love AI" → [1, 1, 0, 1] (I, love, AI는 등장 / NLP는 없음)
           
+<br/>
 
-## p.18부터 
+### 내적 기반의 유사도
 
+- Bag-of-words 방식으로 나타내어진 문장이나 문서의 유사성을 비교할 때 **벡터 내적**을 사용함
 
+    - 문장 1 ex : "Thomas Jefferson began building Monticello at the age of 26."
+ 
+        - 문장 1 벡터 : [1, 1, 1, 1, 1, 1, 0, ...] 
+ 
+    - 문장 2 ex : "He moved into the South Pavilion. Turning Monticello into a neoclassical masterpiece."
+ 
+        -  문장 2 벡터 : [0, 0, 0, 0, 1, 1, 1, ...]
 
-
-
-
+    - 두 문장의 공통 단어 : "Monticello" 와 "the" (BoW 기본형은 불용어도 포함, 현재 예시에서는 the도 포함한다고 가정)
+ 
+        - 이 경우 내적 값은 1x1 + 1x1 = 2 가 됨 (나머지 곱은 모두 0)
+     
+        - 두 문장의 유사도는 2이고 이것을 상대값으로 이용해서 다른 문장들도 비교하는 방식을 사용
 
 
 
