--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -221,11 +221,68 @@ representation)이라고 함
      
         - 두 문장의 유사도는 2이고 이것을 상대값으로 이용해서 다른 문장들도 비교하는 방식을 사용
 
+<br/>
+
+- 코드 예시 
+
+```ruby
+# 두 개의 문장을 정의 (문장 0, 문장 1)
+sentences = "Thomas Jefferson began building Monticello at the age of 26.\n"
+sentences += "He moved into the South Pavilion. Turning Monticello into a neoclassical masterpiece."
+
+# 단어 등장 여부를 저장할 딕셔너리 생성
+corpus = {}
+
+# enumerate: 각 문장을 인덱스(i)와 함께 순회
+for i, sent in enumerate(sentences.split("\n")):
+    
+    corpus['sent{}'.format(i)] = dict((tok, 1) for tok in sent.split())
+    # sent.split(): 문장 별로 단어 추출
+    # dict((tok, 1) for tok in sent.split()): 추출 단어마다 1의 값을 매김
+    # corpus['sent0'], corpus['sent1'] 같은 형태로 저장 
 
 
+df = pd.DataFrame.from_records(corpus).fillna(0).astype(int).T
 
+# 결과 출력
+df
+```
 
+- 위 코드 과정
 
+- 예시 문장 : sentences = "I like cats.\nYou like dogs."
+
+- sentences.split("\n")
+    
+    - ["I like cats.", "You like dogs."]
+
+- enumerate(...)
+    - (0, "I like cats.")
+    - (1, "You like dogs.")
+
+- 첫 번째 문장 처리 (i=0, sent="I like cats.")
+
+    - sent.split() → ["I", "like", "cats."]
+
+    - dict((tok,1) for tok in sent.split())
+
+        - {"I":1, "like":1, "cats.":1}
+
+    - 저장 결과: corpus["sent0"] = {"I":1, "like":1, "cats.":1}
+
+- 두 번째 문장 처리 (i=1, sent="You like dogs.")
+
+    - sent.split() → ["You", "like", "dogs."]
+
+    - dict((tok,1) for tok in sent.split())
+        
+         - {"You":1, "like":1, "dogs.":1}
+
+    - 저장 결과: corpus["sent1"] = {"You":1, "like":1, "dogs.":1}
+
+- 최종 결과
+
+    - {"sent0": {"I":1, "like":1, "cats.":1}, "sent1": {"You":1, "like":1, "dogs.":1}} 
 
 
 
