--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -244,8 +244,10 @@ for i, sent in enumerate(sentences.split("\n")):
 
 df = pd.DataFrame.from_records(corpus).fillna(0).astype(int).T
 
-# 결과 출력
-df
+# 내적 값 출력 
+similarity = df.sent0.dot(df.sent1)
+
+print("\n내적값 (similarity):", similarity)
 ```
 
 - 위 코드 과정
@@ -282,7 +284,7 @@ df
 
 - 최종 결과
 
-    - {"sent0": {"I":1, "like":1, "cats.":1}, "sent1": {"You":1, "like":1, "dogs.":1}} 
+  - 내적 값 구하기  
 
 
 
