--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -286,8 +286,23 @@ print("\n내적값 (similarity):", similarity)
 
   - 내적 값 구하기  
 
+<br/>
 
+- 영어 NLP에서 널리 쓰이는 NLTK(Natural Language ToolKit) 사용 예시
 
+```ruby
+from nltk.tokenize import TreebankWordTokenizer
+
+# Tokenize: 문장(text)을 작은 단위로 쪼개는 것
+# Tokenizer: 이 작업을 수행하는 도구(함수, 클래스, 알고리즘)
+# 즉, TreebankWordTokenizer() 는 토크나이저 중 하나임 
+
+tokenizer = TreebankWordTokenizer() 
+tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용 
+
+# 출력 결과
+# ['Thomas', 'Jefferson', 'began', 'building', 'Monticello', 'at', 'the', 'age', 'of', '26', '.']
+```
 
 
 
