--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -304,6 +304,29 @@ tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용
 # ['Thomas', 'Jefferson', 'began', 'building', 'Monticello', 'at', 'the', 'age', 'of', '26', '.']
 ```
 
+<br/>
+
+### n-그램(n-gram)
+
+- **n-그램(n-gram)** : 최대 n개의 토큰들로 이루어진 순차열
+
+    - 여러 토큰들로 합성된 의미를 단일 토큰처럼 나타내기 위해 쓰임
+ 
+        - ex : "I love natural language processing"
+     
+        - 1-그램
+     
+            - [('I',), ('love',), ('natural',), ('language',), ('processing',)]
+         
+        - 2-그램
+     
+            - [('I', 'love'),  ('love', 'natural'),  ('natural', 'language'),  ('language', 'processing')]
+         
+        - 3-그램
+     
+            -  [('I', 'love', 'natural'), ('love', 'natural', 'language'), ('natural', 'language', 'processing')]
+
+
 
 
 
