--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -326,7 +326,7 @@ tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용
      
             -  [('I', 'love', 'natural'), ('love', 'natural', 'language'), ('natural', 'language', 'processing')]
 
-
+        - 즉, **긴 표현(여러 단어)을 하나의 의미 단위**로 보고 싶을 때 사용
 
 
 
