--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -322,13 +322,15 @@ tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용
      
             - [('I', 'love'),  ('love', 'natural'),  ('natural', 'language'),  ('language', 'processing')]
          
+            - Ice cream 이라는 단어도 2-그램을 사용하면 ice cream이 한 토큰으로 처리
+         
         - 3-그램
      
             -  [('I', 'love', 'natural'), ('love', 'natural', 'language'), ('natural', 'language', 'processing')]
 
         - 즉, **긴 표현(여러 단어)을 하나의 의미 단위**로 보고 싶을 때 사용
 
-
+        - 토크나이저와 마찬가지로 대부분의 NLP 라이브러리에서 n-그램 기능도 제공하고 있음
 
 
 
