--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -328,12 +328,11 @@ tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용
      
             -  [('I', 'love', 'natural'), ('love', 'natural', 'language'), ('natural', 'language', 'processing')]
 
-        - 즉, **긴 표현(여러 단어)을 하나의 의미 단위**로 보고 싶을 때 사용
+    - 즉, **긴 표현(여러 단어)을 하나의 의미 단위**로 보고 싶을 때 사용
 
-        - 토크나이저와 마찬가지로 대부분의 NLP 라이브러리에서 n-그램 기능도 제공하고 있음
+    - 토크나이저와 마찬가지로 대부분의 NLP 라이브러리에서 n-그램 기능도 제공하고 있음
 
-
-
+    - 하지만 "at the" 처럼 쓸모없는 표현도 n 그램으로 추가되면 관리 면에서 **단점** 으로 적용될 수 있음
 
 
 
