--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -334,28 +334,115 @@ tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용
 
     - 하지만 "at the" 처럼 쓸모없는 표현도 n 그램으로 추가되면 관리 면에서 **단점** 으로 적용될 수 있음
 
+<br/>
+
+### 한국어 형태소 분석기
+
+- 자연언어는 언어형태학적으로 크게 세 종류로 구분됨 
+
+    - 고립어
+
+        - 한자를 사용하는 중국어와 같이 단어의 형태가 시제
+     
+        - 인칭 변화 등에 따라 바뀌지 않고 고정된 형태의 언어
 
 
+    - 굴절어
+
+         - 영어, 독일어 등과 같이 시제, 인칭 변화 등에 따라 단어의 형태가 변하는 언어
+          - ex) I, My, Me, Mine
+
+    - 교착어
+
+        - 한국어, 일본어 등과 같이 단어에 어미가 붙어 시제, 인칭 등의 뜻이 최종 결정되는 언어
+        - ex) 나의, 나를, 나는, 내가
 
 
+<br/>
+
+- 교착어(한국어)를 split를 하면 같은 의미라도 어미로 붙는 조사가 다르면 서로 다른 단어로 인식
+
+    - "그가, 그에게, 그를, 그는" -> "그"가 핵심이지만, 조사때문에 모두 다른 단어로 취급
+ 
+    - 이것을 **형태소 분석기**로 해결함
+
+<br/>
+
+- **형태소 분석기**
+
+    - 원문 텍스트에서 형태소를 추출하여 토큰화 해주는 모듈 혹은 프로그램
+ 
+        - **KoNLPy 형태소 분석기**
+     
+            -  **Okt**: Open Korean Text의 줄임말
+                
+                - Twitter 분석기라고 불렸음
+                
+                - “ㅋㅋ”, “ㄴㄴ” 비교적 분석이 가능한 장점이 있음
+
+           -  **Kkma**: 꼬꼬마 형태소 분석기의 줄임말
+           
+               - 어미 분석을 자세하게 수행해준다는 것이 장점
+                 
+          -  **Mecab**: 일본어 형태소 분석기 Mecab을 한국어 버전으로 구현한 것
+
+<br/>
+
+### KoNLPy 
+
+- 기능
+
+    -  **moprhs 메서드** : 문장 입력 -> 형태소 분석이 가능
+ 
+    -  **pos 메서드** : 형태소 분석 및 품사 태깅
+ 
+        - 품사 태깅 :  각 형태소마다 품사를 예측한 후 형태소-품사 pair를 만드는 것을 의미
+     
+        - 품사 태깅을 활용하면 특정 품사는 제거하고 특정 품사는 남기는 등의 전처리가 가능함
+
+<br/>
+
+- 예시 코드
+
+```ruby
+from konlpy.tag import Okt, Kkma, Mecab
+
+sentence = "한국어 단어는 형태소들로 구성되어 있다."
+
+# --------------------
+# 1. Okt 분석기
+# --------------------
+
+okt = Okt()
+
+# morphs() : 형태소 단위로 분리
+print("형태소 분석:", okt.morphs(sentence))
+# 출력: ['한국어', '단어', '는', '형태소', '들', '로', '구성', '되어', '있다', '.']
 
 
+# pos() : 형태소 + 품사 태깅
+print("품사 태깅:", okt.pos(sentence))
+# 출력: [('한국어', 'Noun'), ('단어', 'Noun'), ('는', 'Josa'), ('형태소', 'Noun'),
+#          ('들', 'Suffix'), ('로', 'Josa'), ('구성', 'Noun'), ('되어', 'Verb'),
+#          ('있다', 'Adjective'), ('.', 'Punctuation')]
 
+# --------------------
+# 2. Kkma 분석기
+# --------------------
 
+kkma = Kkma()
 
+# morphs() : 더 세밀하게 형태소 단위로 분리
+print("형태소 분석:", kkma.morphs(sentence))
+# 출력 : ['한국어', '단어', '는', '형태소', '들', '로', '구성', '되', '어', '있', '다', '.']
 
-
-
-
-
-
-
-
-
-
-
-
-
+# pos() : 품사 태깅 (축약된 품사 코드 사용)
+print("품사 태깅:", kkma.pos(sentence))
+# 출력 :  [('한국어', 'NNG'), ('단어', 'NNG'), ('는', 'JX'), ('형태소', 'NNG'),
+#           ('들', 'XSN'), ('로', 'JKB'), ('구성', 'NNG'), ('되', 'XSV'),
+#           ('어', 'ECD'), ('있', 'VXV'), ('다', 'EFN'), ('.', 'SF')]
+```
+  
 
 
 
