--- a/Natural Language Processing/Natural Language Processing study/02-1장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-1장.md
@@ -379,10 +379,14 @@ tokenizer.tokenize(sentence) # sentence는 위 코드에서 문장을 사용
                 - Twitter 분석기라고 불렸음
                 
                 - “ㅋㅋ”, “ㄴㄴ” 비교적 분석이 가능한 장점이 있음
+             
+                - SNS/커뮤니티 데이터 분석에 적합 
 
            -  **Kkma**: 꼬꼬마 형태소 분석기의 줄임말
            
                - 어미 분석을 자세하게 수행해준다는 것이 장점
+            
+               - 학문적 연구, 문법 기반 분석에 적합 
                  
           -  **Mecab**: 일본어 형태소 분석기 Mecab을 한국어 버전으로 구현한 것
 
@@ -442,7 +446,7 @@ print("품사 태깅:", kkma.pos(sentence))
 #           ('들', 'XSN'), ('로', 'JKB'), ('구성', 'NNG'), ('되', 'XSV'),
 #           ('어', 'ECD'), ('있', 'VXV'), ('다', 'EFN'), ('.', 'SF')]
 ```
-  
+
 
 
 
