--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -190,16 +190,81 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 
 <br/>
 
-## p.15부터 공부 
+## p.15 시간 남으면 코드 공부 
+
+<br/>
+
+### 감정 분석(sentiment analysis)
+
+- **감정 분석(sentiment analysis)**
+
+   - 글(단어, 문장 등)에 담긴 감정을 찾아내고, 그것이 긍정인지 부정인지 등을 나누어 점수화하는 작업
+
+<br/>
+
+- **구현 기본 아이디어**
+
+    - 텍스트에서 특정 키워드들을 찾고 키워드들에 부여된 점수를 취합하는 방식
+
+    - **(키워드, 감정 점수)** 쌍들을 담은 딕셔너리가 필요함
+ 
+        - ex: happy → +1, sad → -1 
+
+    - 키워드를 정확히 매칭하기 위한 **토큰화 방식**과 **정규화 여부**가 중요
+ 
+        - ‘Why are you doing this?’ -> 일반 톤 
+        
+        - ‘WHY ARE YOU DOING THIS?’” -> 화난 톤으로 인식할 수 있음
+
+<br/>
+
+### 규칙 기반 감정 분석 알고리즘
+
+- 조지아 공과대학에서 만든 규칙 기반 감정 분석 알고리즘을 살펴보자 
+
+```ruby
+>>> from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer
+>>> sa = SentimentIntensityAnalyzer()
+>>> sa.lexicon # 토큰-감정 점수 쌍들이 들어 있음 
+
+>>> sa.polarity_scores(text=\
+{
+    ':(': -1.9,   # VADER는 이모티콘들을 활용 
+    ':)': 2.0,    # ":)" → 긍정 점수, ":(" → 부정 점수
+
+...
 
 
+'pls': 0.3,       # pls와 plz 모두 'please'의 줄임말 -> 같은 점수로 통합해야함 
+'plz': 0.3,
+...
+'great': 3.1,
+... }
 
+>>> [(tok, score) for tok, score in sa.lexicon.items()  # sa.lexicon 에서 (단어, 감정 점수)를 가져옴 
+ ... if " " in tok]      # 그중에서 공백(" ")이 들어 있는 토큰만 고름 
+[("('}{')", 1.6),
+ ("can't stand", -2.0),
+ ('fed up', -1.8),
+ ('screwed up', -1.5)]   # 즉, VADER에는 약 7,500개의 단어 중 띄어쓰기가 들어간 토큰은 3개이다. 그 중 2개는 n-그램이고, 나머지 1개는 키스 "('}{')" 이모티콘 이다 
 
+>>>  sa.polarity_scores(text=\
+ ... "Python is very readable and it's great for NLP.")
+{'compound': 0.6249, 'neg': 0.0, 'neu': 0.661, 'pos': 0.339}
+# pos : 긍정 점수
+# neg : 부정 점수
+# neu : 중립 점수
+# compound : 종합 점수
 
-
-
-
-
+ 
+ ... "Python is not a bad choice for most applications.")
+{'compound': 0.431, 'neg': 0.0, 'neu': 0.711, 'pos': 0.289}
+# 위 문장에서 'not' 을 처리하는 게 핵심이다
+# 'not bad'의 긍정 점수는 'great'보다 약간 낮을 정도로 높다
+# VADER 사전에 없는 단어는 그냥 무시
+# "not good", "not bad" 같은 대표적인 조합은 규칙으로 따로 처리
+# 하지만 "not only good but also amazing" 같은 복잡한 긴 구문은 개별적 단위로 계산 
+```
 
 
 
