--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -246,7 +246,9 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 [("('}{')", 1.6),
  ("can't stand", -2.0),
  ('fed up', -1.8),
- ('screwed up', -1.5)]   # 즉, VADER에는 약 7,500개의 단어 중 띄어쓰기가 들어간 토큰은 3개이다. 그 중 2개는 n-그램이고, 나머지 1개는 키스 "('}{')" 이모티콘 이다 
+ ('screwed up', -1.5)]   # 즉, VADER에는 약 7,500개의 단어 중 띄어쓰기가 들어간 토큰은 3개이다. 그 중 2개는 n-그램이고, 나머지 1개는 키스 "('}{')" 이모티콘 이다
+
+# 그러나 7,500개의 토큰들만에 대해 점수를 매기므로 새로운 토큰들이 추가되면 프로그램 자체를 패치해줘야 하는 등의 단점이 존재함
 
 >>>  sa.polarity_scores(text=\
  ... "Python is very readable and it's great for NLP.")
@@ -263,7 +265,58 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 # 'not bad'의 긍정 점수는 'great'보다 약간 낮을 정도로 높다
 # VADER 사전에 없는 단어는 그냥 무시
 # "not good", "not bad" 같은 대표적인 조합은 규칙으로 따로 처리
-# 하지만 "not only good but also amazing" 같은 복잡한 긴 구문은 개별적 단위로 계산 
+# 하지만 "not only good but also amazing" 같은 복잡한 긴 구문은 개별적 단위로 계산
+
+
+>>> from nlpia.data.loaders import get_data       # nlpia 라이브러리에서 데이터 로더 불러오기
+>>> movies = get_data('hutto_movies')             # VADER 기반 영화 리뷰 데이터셋 불러오기
+>>> movies.head().round(2)                        # 데이터 앞부분 5행을 확인 (점수 : 소수점 둘째 자리 반올림)
+    id  sentiment                                               text
+0    2       2.27     The Rock is destined to be the 21st Century...
+1    3       3.53     The gorgeously elaborate continuation of ''...
+2    4      -0.60     Effective but too tepid ...
+3    5       1.47     If you sometimes like to go to the movies t...
+4    7       1.73     Emerges as something rare, an issue movie t...
+
+>>> movies.describe().round(2)                    # 데이터 전체의 통계 요약
+       sentiment
+count   10605.00   # 전체 리뷰 개수
+mean       0.06    # 평균 점수 (중립에 가까움)
+std        1.91    # 점수 흩어짐(표준편차)
+min       -3.88    # 최저 점수 (강한 부정)
+25%       -1.32    # 하위 25% 지점
+50%        0.00    # 중앙값 (중립)
+75%        1.34    # 상위 25% 지점
+max        3.94    # 최고 점수 (강한 긍정)
+
+>>> import pandas as pd                              # 판다스 불러오기 (데이터 처리용)
+>>> pd.set_option('display.width', 75)               # DataFrame 출력 폭을 늘려서 보기 좋게 설정
+
+>>> from nltk.tokenize import casual_tokenize        # NLTK의 casual_tokenize 불러오기
+                                                     # 이 함수는 이모티콘, 비표준적 문장 부호, 줄임말 등을 잘 처리함
+
+>>> from collections import Counter                  # 파이썬 내장 Counter: 리스트 요소의 개수를 세어 dict 형태로 반환
+>>> bags_of_words = []                               # BoW(단어 빈도) 결과를 저장할 리스트 준비
+>>> for text in movies.text:                         # text : 실제 영화 리뷰 문장
+...     bags_of_words.append(                       
+...         Counter(casual_tokenize(text))           # 리뷰 문장을 casual_tokenize로 토큰화하고,
+...     )                                            # Counter로 단어별 등장 횟수를 세어 BoW 벡터 생성
+
+>>> df_bows = pd.DataFrame.from_records(bags_of_words)  # bags_of_words 리스트(리뷰별 단어 빈도 Counter 객체들)를 DataFrame으로 변환
+>>> df_bows = df_bows.fillna(0).astype(int)  # 비어 있는 값(NaN)을 0으로 채우고, 모든 값을 int로 변환
+
+# df로 전환 후 shape을 확인하면 NLTK의 casual_tokenize 방식으로 총 20756개의 토큰에 대해 vocab을 만든 걸 확인할 수 있음
+
+>>> from sklearn.naive_bayes import MultinomialNB  # 사이킷런에서 다항 분포 나이브 베이즈(MultinomialNB) 분류기 불러오기
+>>> nb = MultinomialNB()    # 분류기 객체 생성
+>>> nb = nb.fit(df_bows, movies.sentiment > 0)  # 모델 학습: BoW 벡터(df_bows)를 입력
+# sentiment > 0 → 긍정(1), 부정(0)으로 레이블 변환 후 학습
+
+movies['predicted_sentiment'] = nb.predict_proba(df_bows) * 8 - 4 # -4~4 점수 사용
+# nb = 학습된 Multinomial Naive Bayes 모델
+# df_bows = BoW로 변환된 리뷰 데이터
+# predict_proba는 각 샘플이 부정(0), 긍정(1)일 확률을 반환
+
 ```
 
 
