--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -220,7 +220,7 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 
 ### 규칙 기반 감정 분석 알고리즘
 
-- 조지아 공과대학에서 만든 규칙 기반 감정 분석 알고리즘을 살펴보자 
+- 조지아 공과대학에서 만든 규칙 기반 VADER 감정 분석 알고리즘을 살펴보자 
 
 ```ruby
 >>> from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer
@@ -315,12 +315,50 @@ max        3.94    # 최고 점수 (강한 긍정)
 movies['predicted_sentiment'] = nb.predict_proba(df_bows) * 8 - 4 # -4~4 점수 사용
 # nb = 학습된 Multinomial Naive Bayes 모델
 # df_bows = BoW로 변환된 리뷰 데이터
-# predict_proba는 각 샘플이 부정(0), 긍정(1)일 확률을 반환
+# predict_proba는 일반 predict과 다르게 클래스의 값만 출력하는게 아니라 긍정/부정일 확률을 반환함 
 
+>>> movies['error'] = (movies.predicted_sentiment - movies.sentiment).abs()
+# 예측값(predicted_sentiment)과 실제값(sentiment)의 차이 → 오차
+# abs() = 절댓값
+>>> movies.error.mean().round(1) # 절댓값 오차들의 평균
+
+>>> movies['sentiment_ispositive'] = (movies.sentiment > 0).astype(int)
+>>> movies['predicted_ispositive'] = (movies.predicted_sentiment > 0).astype(int)
+>>> movies[['sentiment', 'predicted_sentiment', 'sentiment_ispositive', 'predicted_ispositive']].head(8)
+
+# sentiment : 원래 데이터셋에 들어 있는 값
+# predicted_sentiment : Naive Bayes 모델이 예측한 점수
+# sentiment_ispositive : 실제 감정 → 0보다 크면 1(긍정)
+# predicted_ispositive : 예측 감정 → 0보다 크면 1(긍정)
 ```
 
+- 마지막 코드의 출력 부분은 아래와 같이 나옴
 
+```ruby
+   sentiment  predicted_sentiment  sentiment_ispositive  predicted_ispositive
+id
+1    2.266667                   4                    1                      1
+2    3.533333                   4                    1                      1
+3   -0.600000                  -4                    0                      0
+4    1.466667                   4                    1                      1
+5    1.733333                   4                    1                      1
+6    2.533333                   4                    1                      1
+7    2.466667                   4                    1                      1
+8    1.266667                  -4                    1                      0
+```
 
+<br/>
+
+### 감정 분석 코드 평가 
+
+- accuracy **93%** 정도 성능 확인
+
+    - **하지만**, 해당 모델로 새로운 데이터셋인(상품평 데이터)에서 정확도를 평가했더니 **55.7%** 가 나옴
+ 
+        - 새로운 상품평 데이터에서는 원래 vocab 크기보다 2500개가량 **더 많은 토큰**이 있었기 때문
+        - 따라서 전처리 과정에서 정보가 손실 -> 새로운 데이터셋에서의 성능이 크게 떨어짐
+     
+        - n-그램 등 다양한 기법을 통해 단순한 기계 학습 기반 접근방식의 성능도 향상 가능
 
 
 
