--- a/Discrete Structures/Discrete Structures study/02-1장.md
+++ b/Discrete Structures/Discrete Structures study/02-1장.md
@@ -421,10 +421,11 @@
 
 
 
-## p.23 부터 
+### 예시 문제 
 
+- 논리식 변형 문제 : 두 개의 양의 정수의 합은 항상 양수이다
 
-
+    - ∀x∀y(((x > 0) ∧ (y > 0)) → (x + y > 0))
 
 
 
