--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -200,17 +200,44 @@
 
 <br/>
 
-## p.26
+### 쌍조건문 증명 
+
+- 쌍조건명제(↔)를 증명하려면 **p → q와 q → p가 모두 참**임을 보여야 한다
+
+    - ex: 정수 n에 대해, “n이 홀수일 때 그리고 오직 그때만 n²도 홀수이다”를 증명하라
+ 
+    - 위 홀수 문제 예시에서 이미 p → q와 q → p를 증명함
+ 
+        - 따라서 p ↔ q라고 결론 내릴 수 있다
+
+<br/>
+
+### 증명 문제 주의할 점 
+
+- 만약 전개 과정에서 a = b 라는 전제가 있을 때
+
+    - (a-b)(a+b) = b(a-b) 에서 (a-b) = 0 이므로 a+b = b 로 전개 불가능 
+
+<br/>
+
+### 증명 기법
 
 
+- (p1​∨p2​∨…∨pn​) → q : "여러 조건 중 하나라도 맞으면 q가 성립한다" 는 말을 증명를 증명하려면
 
-
-
-
-
-
-
-
+    - [(p1​∨p2​∨…∨pn​)→q]↔[(p1​→q)∧(p2​→q)∧…∧(pn​→q)] : 조건별로"pᵢ이면 q이다"를 증명하면 된다
+ 
+    - 각각의 명제 “pᵢ → q”가 하나의 경우(case)가 된다
+ 
+        - ex: “비가 오거나 눈이 오거나 바람이 불면, 우산을 챙긴다.”
+     
+            - "(비∨눈∨바람) → 우산" 에서 아래 3개만 증명하면 된다 
+         
+                - 비 → 우산
+             
+                - 눈 → 우산
+             
+                - 바람 → 우산 
 
 
 
