--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -240,13 +240,39 @@
                 - 바람 → 우산 
 
 
+<br/>
 
+- 아래는 위 증명 기법을 사용한 예시 문제이다 
 
+- 전제 : a @ b를 max(a,b)로 정의한다. 즉, 만약 a≥b이면 a @ b = a, 그렇지 않으면 a @b = b.
 
+- 문제 : 모든 실수 a,b,c에 대해 (a @ b)@c = a@(b @ c)임을 보여라
 
+    - Case 1: a가 가장 클 때
 
+        - 좌변: (a@b) = a → (a@b)@c = a@c = a
 
+        - 우변: (b@c) ≤ a, 따라서 a@(b@c) = a
 
+        - 좌변 = 우변 = a
+
+    - Case 2: b가 가장 클 때
+
+        - 좌변: (a@b) = b → (a@b)@c = b@c = b
+
+        - 우변: (b@c) = b → a@(b@c) = a@b = b
+
+        - 좌변 = 우변 = b
+
+    - Case 3: c가 가장 클 때
+
+       - 좌변: (a@b) ≤ c, 따라서 (a@b)@c = c
+
+        - 우변: (b@c) = c → a@(b@c) = c
+
+        - 좌변 = 우변 = c
+
+    - 즉 (Case1 ∨ Case2 ∨ Case3) → q 꼴임
 
 
 
