--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -274,7 +274,29 @@
 
     - 즉 (Case1 ∨ Case2 ∨ Case3) → q 꼴임
 
+<br/>
 
+### WLOG 및 대우 증명(contraposition) 활용 문제 
+
+- **WLOG (Without Loss of Generality)**
+
+    - 서로 대칭적인 경우 중 하나만 증명하면 나머지도 같은 원리로 성립한다는 뜻  
+
+<br/>
+
+- 문제 : x와 y가 정수이고, x⋅y와 x+y가 모두 짝수라면, x와 y도 모두 짝수임을 보여라
+
+    - 대우 : x와 y가 모두 짝수가 아니라면, x⋅y와 x+y가 모두 짝수가 아니다 
+ 
+    - x가 홀수라고 가정하자. 그러면 x는 어떤 정수 m에 대해 x=2m+1이다
+ 
+        - x가 홀수인 경우와 y가 홀수인 경우는 대칭적인 상황. 즉 한 경우만 증명해도 됨
+ 
+    - **Case1 : y가 짝수**라면, y = 2n (정수 n에 대해). 그러면 x+y = (2m+1)+2n = 2(m+n)+1, 즉 홀수가 된다
+ 
+    - **Case 2 : y가 홀수**라면, y = 2n+1 (정수 n에 대해). 그러면 x·y = (2m+1)(2n+1) = 2(2mn + m + n)+1, 즉 홀수가 된다
+
+   - 증명완료 
 
 
 
