--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -298,10 +298,20 @@
 
    - 증명완료 
 
+<br/>
 
+### ∃x P(x) 형태의 증명 
 
+- "어떤 x가 존재해서 P(x)가 참이다"를 증명할 때 P(c)가 참이되는 **c값을 실제로 찾아라**
+    - 그러면 ∃x P(x)는 존재 일반화(EG)에 의해 참이다
+ 
+    - 즉 우리는 P(c)를 참으로 만드는 **c가 존재하지 않는다고 가정하고 모순**을 이끌어낸다
 
+<br/>
 
+- 예시 문제 : 하나의 양의 정수를 서로 다른 두 가지 방법으로 세제곱 합으로 나타낼 수 있음을 보여라
+
+    - 예시 답변 : 1729 = 10³ + 9³ = 12³ + 1³" 
 
 
 
