--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -311,9 +311,11 @@
 
 - 예시 문제 : 하나의 양의 정수를 서로 다른 두 가지 방법으로 세제곱 합으로 나타낼 수 있음을 보여라
 
-    - 예시 답변 : 1729 = 10³ + 9³ = 12³ + 1³" 
+    - 예시 답변 : 1729 = 10³ + 9³ = 12³ + 1³"
+ 
+    - 아래는 증명 과정이다
 
-
+![System Resources](../../images/Discrete%20Structures%20images/무리수증명필기본.png)
 
 
 
