--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -315,7 +315,7 @@
  
     - 아래는 증명 과정이다
 
-![System Resources](../../images/Discrete%20Structures%20images/무리수증명필기본.png)
+![System Resources](../../images/Discrete%20Structures%20images/무리수증명필기본.jpg)
 
 
 
