--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -51,6 +51,12 @@
     - ¬q(결론이 거짓)을 가정하고, ¬p(조건도 거짓임)를 증명하는 방식
 
     -  만약 ¬q → ¬p를 직접 증명하면, 그것은 p → q의 증명하는 것과 동치이다
+ 
+    -  ex: 만약 𝑛2이 홀수라면, n도 홀수이다
+ 
+        - 위 명제에서 n제곱을 2k+1로 두면 n은 루트값이 되어버려 번거러움
+     
+        - 이때 대우를 쓰면 “만약 n이 짝수라면, n2도 짝수이다.” 가 되어 증명하기 편리함
 
 <br/>
 
