--- a/Discrete Structures/Discrete Structures study/중간정리본.md
+++ b/Discrete Structures/Discrete Structures study/중간정리본.md
@@ -65,3 +65,108 @@
 - **연산자 우선 순위**
 
 ![System Resources](../../images/Discrete%20Structures%20images/연산자우선순위.png)
+
+<br/>
+
+### 2주차 
+
+- **술어 논리 vs 명제 논리 차이**
+
+    - 명제 논리 (Propositional Logic) : 이미 참/거짓이 결정된 **완성된 문장**을 다룸
+
+    - 술어 논리 (Predicate Logic) : **조건식**과 **변수**를 사용
+
+<br/>
+
+- **한정자의 우선순위**
+
+    - ∀x P(x) ∨ Q(x) = (∀x P(x)) ∨ Q(x)
+
+    - ∀x (P(x) ∨ Q(x)) 는 **전혀 다른 의미**
+
+<br/>
+
+- **문장을 술어 논리로 옮길 때**
+
+    - **∃ (존재)** 는 **∧** 사용
+ 
+    - **∀ (전체)** 는 **→** 사용
+
+<br/>
+
+- **유한 도메인에서의 한정자 전개**
+
+
+    - **전칭 한정자(∀)** 는 **논리곱(AND, ∧)**
+ 
+        - ∀x P(x) ≡ P(1) ∧ P(2) ∧ P(3)
+
+    - **존재 한정자(∃)** 는 **논리합(OR, ∨)**
+ 
+        - ∃x P(x) ≡ P(1) ∨ P(2) ∨ P(3) 
+
+<br/>
+
+- **드모르간**
+
+    - ∃의 부정 = ∀
+
+    - ∀의 부정 = ∃
+
+
+
+- **증명과 정리 요약**
+
+- 요약본
+  
+    - Proof (증명) = 참임을 보이는 논리적 과정
+ 
+        - Direct Proof (직접 증명) : p가 참이라고 가정 후 q 증명
+     
+        - Proof by Contraposition (대우 증명) : ¬q(결론이 거짓)을 가정 후 ¬p(조건도 거짓임)를 증명
+     
+        - Proof by Contradiction (모순법) :  ¬p를 가정하고 모순을 이끌어내는 방식
+     
+        - Trivial Proof (자명한 증명) : 만약 q가 참임을 안다면, p → q 역시 참
+     
+        - Vacuous Proof (공허한 증명) : 만약 p가 거짓이라면, p → q 역시 참
+
+    - Theorem (정리) = 증명된 중요한 명제
+
+    - Lemma (보조정리) = 정리를 증명하기 위한 중간단계 정리
+
+    - Corollary (따름정리) = 정리에서 바로 따라오는 결과
+
+    - Proposition (명제) = 비교적 덜 중요한 정리
+
+    - Conjecture (추측) = 증명 전 단계의 추측 (참일 수도, 거짓일 수도 있음) 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
