--- a/Natural Language Processing/Natural Language Processing study/중간정리본.md
+++ b/Natural Language Processing/Natural Language Processing study/중간정리본.md
@@ -22,10 +22,12 @@
  
         - 유의미한 단어들의 등장 횟수를 벡터로 표현 (불용어 제외)
      
-        - 단점 : 단어들의 순서 및 문법 정보를 손상
- 
-        - ex: “개가 사람을 물었다” vs “사람이 개를 물었다” 를 보고 개와 사람과 관련이 있는 문장이라고만 파악
-     
+        - 유사성을 비교할 때 **내적** 활용
+        
+        - 장점 : 원 핫 인코딩의 메모리 문제 해결 
+
+        - 단점 : 단어들의 순서 및 문법 정보를 손상 (주제만 파악 가능)
+
     - Bag-of-words 초기 극복 아이디어
  
         - **구문 트리** 사용
@@ -45,24 +47,47 @@
 
     - **실행**: 대화 계획 관리 및 응답문을 선택하여 출력 진행 -> 여러 후보 중 적절한 답을 골라서 사용자에게 보여줌
 
-  
+<br/>
 
+### 2주차 
 
+- **원 핫 인코딩**
 
+    - **장점** : 단순하고 직관적, 범주형 데이터를 수학적으로 다룰 수 있음
 
+    - **단점** : 벡터 차원이 커짐(메모리 **비효율**)
 
+    - **해결책** : Bag-of-words
+ 
+        -  벡터의 길이는 토큰 수와 같지만, 문장 자체를 벡터로 사용 -> **메모리 절감**
 
+<br/>
 
+- **n-그램(n-gram)** : **긴 표현(여러 단어)을 하나의 의미 단위**로 보고 싶을 때 사용
 
+<br/>
 
+- **정규화(normalization)** : 질적으로는 의미가 같으나 표현 방법이 다른 단어들을 통합하는 과정
 
+  - 대소문자 통합
+ 
+      - 장점 : 토큰 수 감소, 과적합 감소, 재현율 개선 기여
+   
+      - 단점 : 고유명사 인식 어려움, 의도적 대문자 구분 x 
 
+  - 어간 추출
 
+  - 표제어 추출
 
+<br/>
 
+- **재현율(recall) & 정밀도(precision)**
 
+    - **재현율(recall)**: 실제로 관련 있는 문서 중에서 얼마나 많이 찾아냈는가?
 
-
+    - **정밀도(precision)**: 찾아낸 문서 중에서 실제로 관련 있는 문서가 얼마나 되는가?
+ 
+    - 일반적으로 어휘 정규화는 **검색의 재현율을 높이지만 정밀도를 낮추게 됨**
 
 
 
