--- a/Natural Language Processing/Natural Language Processing study/02-2장.md
+++ b/Natural Language Processing/Natural Language Processing study/02-2장.md
@@ -74,8 +74,16 @@ len(stop_words.intersection(sklearn_stop_words)) # 두 라이브러리 불용어
 - 검색 성능을 평가할 때 쓰는 두 가지 지표
 
     - **재현율(recall)**: 실제로 관련 있는 문서 중에서 얼마나 많이 찾아냈는가?
+ 
+        - ex: 환자가 실제로 암인데도 "암이 아니다"라고 놓치면 위험이 큼
+     
+        -  놓치지 않고 다 잡는 게 중요할 때 사용 
 
     - **정밀도(precision)**: 찾아낸 문서 중에서 실제로 관련 있는 문서가 얼마나 되는가?
+ 
+        - ex: 스팸 메일 필터
+     
+        - 예측한 것 중에서 정말 맞는 게 많아야 함
 
 <br/>
 
