--- a/Natural Language Processing/Natural Language Processing study/중간정리본.md
+++ b/Natural Language Processing/Natural Language Processing study/중간정리본.md
@@ -76,8 +76,16 @@
       - 단점 : 고유명사 인식 어려움, 의도적 대문자 구분 x 
 
   - 어간 추출
+ 
+      - 단어의 뿌리만 추출 
+ 
+      - ex: running → runn
 
   - 표제어 추출
+ 
+      - 의미적인 부분에 집중
+   
+      - ex: better → good
 
 <br/>
 
