--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -1,9 +1,5 @@
 ### From Biology to Artificial Intelligence
 
-- 인공지능(ANN, Artificial Neural Network)은 생물학적 **뉴런(신경세포)을 모방**해서 만들어
-
-<br/>
-
 - 생물학적 뉴런의 구성 요소
   
     - 수상돌기(Dendrite): 입력을 받는 부분 (안테나처럼 신호를 받음)
@@ -194,7 +190,19 @@
         - 출력 : 밖에 나간다(1)
     
 
- ## p.16
+ ### Linear Decision Boundaries (선형 결정 경계)
+
+ - **Linear Decision Boundaries**
+
+ - 머신러닝에서 분류를 할 때, 데이터를 구분하는 경계
+
+     - 1차원 : 점(point)
+  
+     - 2차원 : 선(line)
+  
+     - 3차원 : 면(plane)
+  
+     - 4차원 이상 : 초평면(hyperplane) -> 직접 볼 수 없음 
 
 
 
