--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -204,10 +204,21 @@
   
      - 4차원 이상 : 초평면(hyperplane) -> 직접 볼 수 없음 
 
+<br/>
 
+- 선형 결정 경계 공식
+  
+![System Resources](../../images/Artificial%20Neural%20Network%20images/선형결정경계공식.png)
 
+- 위 공식을 보면 wTx 는 **내적**을 의미한다
 
-
+    - wTx + b = w[0]x[0] + w[1]x[1] + ... + w[m-1]x[m-1] + b
+ 
+    - 즉, 내적은 각 차원의 가중치 x 특징값을 모두 더한 값
+ 
+        - b를 오른쪽으로 이항시킴으로서 기준을 0으로 일반화 가능 
+     
+        - 이 식은 n차원에서도 동일하게 적용 가능함
 
 
 
