--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -220,12 +220,43 @@
      
         - 이 식은 n차원에서도 동일하게 적용 가능함
 
+<br/>
+
+- **특징 계수(feature coefficient)**
+
+    - 벡터 w는 각 특징(입력값 x)에 곱해지는 가중치들을 모아둔 것
+ 
+        - 이 가중치 하나하나를 **계수(coefficient)** 라고 함  
+  
+    - ex: 스팸 이메일을 분류한다고 하고, 네 번째 특징 x[4]이 이메일에 포함된 철자 오류 개수를 나타낸다고 하자
+ 
+        - 만약 이 특징의 계수 w[4]가 양수라면, 철자 오류 개수가 많을수록 스팸으로 분류 가능성이 커짐
+     
+        - 즉, 가중치 벡터 w의 각 원소는 해당 특징이 결과에 미치는 **영향력(계수)** 을 의미
+
+<br/>
+
+- **bias term b (편향 b)**
+
+    - 편향 b는 **입력 특징(feature)에 의존하지 않는다**
+ 
+        - 즉, wTx는 입력 특징값 x에 따라 변하지만, **b는 항상 고정된 상수**
+     
+            - 데이터와 무관하게 **결정 경계를 평행 이동**시키는 역할
+         
+            - 따라서 전체 예측 결과를 더 긍정적(+1 쪽) 또는 부정적(-1 쪽)으로 이동시킬 수 있음
+            - 만약 b가 큰 음수라면, 모델은 전체적으로 음수(-1) 예측을 하도록 치우치게 됨
+
+    <br/>
 
 
-
-
-
-
+    - 편향 항을 포함하는 것은 **필수적**이다
+ 
+    - 선형 결정 경계로 완벽하게 분리 가능한 데이터셋이 있더라도, 바이어스 항이 없으면 그렇게 하는 것이 **불가능**할 수 있음
+ 
+        - ex: b=0이면, 결정 경계는 무조건 원점(0,0)을 지나야 하지만 실제 데이터는 원점을 중심으로 대칭적으로 분리되지 않을 수 있음
+     
+        - 따라서 b가 있어야 경계를 옮겨서 데이터를 **제대로 분리가 가능**함
 
 
 
