--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -258,7 +258,7 @@
      
         - 따라서 b가 있어야 경계를 옮겨서 데이터를 **제대로 분리가 가능**함
 
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/편향필요예시.png)
 
 
 
