--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -260,10 +260,12 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/편향필요예시.png)
 
+<br/>
+
+### 선형 결정 경계(Linear Decision Boundary)의 직관과 해석
 
 
-
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/선형결정경계해석.png)
 
 
 
