--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -264,15 +264,36 @@
 
 ### 선형 결정 경계(Linear Decision Boundary)의 직관과 해석
 
-
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/선형결정경계해석.png)
 
+- 직관과 해석
+ 
+    - w⋅x+b=0
+
+        - 데이터 공간을 양쪽으로 나누는 선/면/초평면 
+
+    - activation = w⋅x+b
+
+        - 점이 결정 경계로부터 얼마나 떨어져 있는지를 계산
+ 
+            - SVM 같은 알고리즘에서 유용함
 
 
+    - 직관적 해석
+ 
+        - 수학적 : 단순 w⋅x+b=0라는 방정식
+     
+        - 기하학적 : 결정 경계는 항상 가중치 벡터 w와 수직 관계를 가짐
+     
+            - 증명 : 어떤 두 점 x1과 x2가 이 경계 위에 있다면
+         
+                - w ⋅ x1 ​+ b = 0 / w ⋅ x2​ + b = 0
+             
+                - 두 식을 정리하면 w⋅(x1​−x2​)=0 -> w와 내적이 0 → 직교
+             
+                - 즉, 어떤 점 이든 w와 수직방향임
 
-
-
-
+        - 물리적 : 경계는 말 그대로 균형선같은 역할을 함
 
 
 
