--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -295,24 +295,79 @@
 
         - 물리적 : 경계는 말 그대로 균형선같은 역할을 함
 
+<br/>
+
+### Weights
+
+- 가중치는 **각 특징(feature)의 중요성**을 나타낸다
+
+- 만약 특정 특징 값이 조금 변했을 때, 최종 분류 결과가 얼마나 민감하게 변할까?
+
+    - 이 질문은 **미분**으로 해결 가능
+ 
+    - 예시 : f(x) = sign(Σi wi xi + b)에서 x4가 변했을 때의 민감도는 ?
+ 
+        - 네 번째 특징에 대해 미분하면, 변화율은 w4이다 (시그마의 나머지 값은 상수 취)
+     
+        - 즉, 𝑤4값이 곧 그 특징이 결과에 미치는 영향의 크기와 방향
+      
+ <br/>
+
+ - 가중치 예시 문제 : 스팸 여부를 판단하는 데 쓰이는 입력 데이터
+
+ - feature를 다음과 같이 정의하자
+
+     - x1: 단어 개수
+
+     - x2 : 철자 오류 개수
+
+     - x3 : 링크 개수
+
+     - x4 : 발신자 평판
+ 
+
+- 학습된 가중치는 [0.1 , 2.5 , 1.8 , −3.2]
+
+- 해석
+  
+    - w₂ = 2.5 (spelling errors)
+
+         - 철자 오류 개수는 스팸일 가능성을 크게 높이는 특징
+
+    - w₄ = -3.2 (sender reputation)
+
+        - 발신자 평판이 좋으면 스팸이 아닐 가능성이 큼
+     
+            - 여기서 평판은 apple, 삼성은 신뢰도가 높지만, 처음보는 곳은 낮다는 의미 
+
+    - w₁ = 0.1 (word count)
+      
+        - 단어 개수는 영향력이 거의 없음.
 
 
+    - 철자 오류가 1개 늘면 스팸 점수가 2.5만큼 증가하고, 발신자 평판이 1만큼 좋아지면 스팸 점수가 3.2만큼 감소
+ 
+        - 즉, **가중치의 크기**는 **민감도**이다 
 
+<br/>
 
+### 신경망 그래프 모델링 
 
+- 노드 = 뉴런 (신경세포)
 
+- 간선 = 가중치 wij를 가진 시냅스 연결
 
+- 표기법: wij는 뉴런 i에서 뉴런 j로 가는 가중치
 
+    - **순 입력(net input)** : 입력값 × 가중치들을 모두 더한 값 (누적 )
+ 
+        - **netⱼ = Σᵢ (wᵢⱼ · oᵢ)** : 뉴런 j가 받은 신호 =  여러 입력 뉴런 i에서 나온 출력 oi에, 가중치 wij를 곱해서 모두 더한 값
+ 
+    - **Output** : 임계값 이상이면 출력은 1, 작으면 0
+ 
+        - Tj는 뉴런 j의 임계값 
 
-
-
-
-
-
-
-
-
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/뉴런출력예시.png)
 
 
 
