--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -369,10 +369,38 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/뉴런출력예시.png)
 
+- 예시 문제
 
+    - 입력 뉴런 값들:
 
+         - o1 = 1, o2 = 0, o3 = 1
 
+    - 가중치:
+ 
+        - w1j = 0.5, w2j = 1.0, w3j = 0.8
 
+    - 임계값:
 
+         - Tj = 1.0
 
+    - 계산 : netj=(0.5×1)+(1.0×0)+(0.8×1)=0.5 + 0 + 0.8 = 1.3
+ 
+        - netj​ ≥ Tj 이므로 oj​=1
+
+<br/>
+
+### McCulloch & Pitts (1943) 신경망 모델
+
+- McCulloch와 Pitts(1943)는 뉴런이 적절한 가중치와 임계값을 선택하면 **논리 게이트**처럼 동작할 수 있다고 함 (실제로 만듦)
+
+    - 뉴런들의 네트워크는 컴퓨터가 할 수 있는 **모든 계산을 할 수 있다**
+ 
+    - 즉, 뉴런은 AND, OR, NOT 같은 **논리 게이트를 모방**할 수 있다
+        
+    - 하지만 진짜 질문은, 이 뉴런들이 무엇을 계산해야 하는지를 **스스로 학습할 수 있는가**? 이다
+ 
+        - 단순히 사람이 가중치와 임계값을 **정해주는 게 아니라**, 컴퓨터가 **스스로 학습**하여 최적의 값을 찾아야 한다
+     
+        - 그래서 등장한 것이 **퍼셉트론 학습 알고리즘**이다
+     
 
