--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -402,5 +402,40 @@
         - 단순히 사람이 가중치와 임계값을 **정해주는 게 아니라**, 컴퓨터가 **스스로 학습**하여 최적의 값을 찾아야 한다
      
         - 그래서 등장한 것이 **퍼셉트론 학습 알고리즘**이다
-     
+
+<br/>
+
+- 퍼셉트론은 아래와 같이 간단한 논리 연산은 구현 가능하다
+  
+![System Resources](../../images/Artificial%20Neural%20Network%20images/논리게이트1.png)
+![System Resources](../../images/Artificial%20Neural%20Network%20images/논리게이트2.png)
+
+<br/>
+
+### 선형회귀 vs 퍼셉트론 차이점 
+
+- **퍼셉트론**
+
+    - 입력값을 받아서 -> (가중치 곱) → 합계(Net input) → 규칙(activation function) 적용 → 최종 결과(output) 과정이 이루어짐
+ 
+    - 넘으면 1, 아니면 0
+ 
+- **선형 회귀**
+
+    - 입력값을 받아서 -> (가중치 곱) → 합계(Net input) 에서 끝
+ 
+    - 합계가 곧 결과
+ 
+- 예시
+
+    - 입력값: x1 = 2, x2 = 3
+   
+    - 가중치: w1 = 1, w2 = 2
+
+    - 편향(bias): b = -4
+ 
+        - 선형회귀 : z=(2)(1)+(3)(2)−4=2+6−4=4
+ 
+        - 퍼셉트론 : z=4, -> 활성화 함수 -> 0 or 1로 분류 
+
 
