--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -438,4 +438,65 @@
  
         - 퍼셉트론 : z=4, -> 활성화 함수 -> 0 or 1로 분류 
 
+![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론구조예시.png)
+
+<br/>
+
+### 우리가 하고싶은 것 
+
+- 결국 분류 오류를 최소화하는 분류기를 만들고 싶음
+
+    - **퍼셉트론** 알고리즘으로 만들 수 있음
+ 
+        -  그러나 데이터가 **선형적으로 구분(linearly separable)되지 않으면** 일반적으로 이 문제는 풀 수 없다는 것이다 (**NP 하드 문제**)
+     
+        - 즉, 퍼셉트론은 **직선(혹은 초평면)으로만** 데이터를 나누기 때문에, XOR 같은 데이터는 해결 불가
+     
+        - 일반적인 해결법 : **학습 오류를 작게** 만드는 **매개변수(parameters)**를 찾는 것
+
+<br/>
+
+- **데이터가 선형적으로 구분된 경우**
+
+    - 입력과 정답(출력)이 함께 주어지는 지도 학습 데이터가 있다고 가정
+ 
+    - 각 입력 예제에 대해 올바른 출력을 만들도록 **가중치(weight)** 를 학습한다
+ 
+        - 퍼셉트론은 **반복적인** 업데이트 알고리즘으로 올바른 가중치를 학습한다
+     
+            - 점차적으로 맞추어 나감  
+
+    - 이진 분류 문제에서, 두 클래스가 선형적으로 구분 가능하다면 퍼셉트론은 올바른 결정 경계를 찾는다
+
+<br/>
+
+### Online learning (온라인 학습)
+
+- **Online learning (온라인 학습)**: 데이터를 하나 보자마자 **곧바로** 가중치 w를 업데이트
+
+- **Batch learning (배치 학습)** : 모든 데이터를 모아놓고 **한꺼번에** 계산 → 그 다음에 업데이트
+
+<br/>
+
+- Online learning 의 경우 만약 오류가 없으면 w를 바꾸지 않고 오류가 있으면 w를 수정한다
+
+    - 수정 방식 : **w ← w + yx** (y값은 +1, -1)
+ 
+        -  위 방식을 사용하면, 예측이 틀리면 **정답 방향으로** 가중치를 조금 움직
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
